# django-check-prefetch

./: Makefile  noxfile.py  pyproject.toml  setup.cfg
check_prefetch/: __init__.py  exceptions.py  models.py  query.py
tests/: manage.py
tests/_project/: asgi.py  settings.py  urls.py  wsgi.py
tests/app/: apps.py  models.py  tests.py
tests/app/migrations/: 0001_initial.py
